[package]
name = "apcaledge"
version = "0.3.1"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.59"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/apcaledge"
repository = "https://github.com/d-e-s-o/apcaledge.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "command-line-utilities",
]
keywords = ["cli", "finance", "async", "stocks", "ledger"]
description = """
A command line tool for exporting trading activity from Alpaca
(alpaca.markets) in a Ledger CLI compatible format.
"""

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
apca = {version = "0.27.0", default-features = false}
anyhow = {version = "1.0.66", default-features = false, features = ["std"]}
chrono = {version = "0.4.23", default-features = false}
chrono-tz = {version = "0.6.1", default-features = false, features = ["std"]}
futures = {version = "0.3", default-features = false, features = ["std"]}
num-decimal = {version = "0.2.1", default-features = false}
once_cell = "1.8"
regex = "1.5.3"
serde_json = {version = "1.0", default-features = false}
structopt = {version = "0.3.8", default-features = false}
tokio = {version = "1.0", default-features = false, features = ["rt"]}
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt"]}

[dev-dependencies]
# A set of unused dependencies that we require to force correct minimum versions
# of transitive dependencies, for cases where our dependencies have incorrect
# dependency specifications themselves.
_openssl_unused = {package = "openssl", version = "0.10.55"}
